Don't emit inlined writes to watched globals (bug 758543, r=sstangl).