js/src/ion/IonBuilder.cpp
@@ -3764,17 +3764,17 @@ IonBuilder::jsop_getgname(HandlePropertyName name)
 bool
 IonBuilder::jsop_setgname(HandlePropertyName name)
 {
+    RootedVarObject globalObj(cx, script->global());
     RootedVarId id(cx, NameToId(name));
+
+    JS_ASSERT(globalObj->isNative());
 
     bool canSpecialize;
     types::TypeSet *propertyTypes = oracle->globalPropertyWrite(script, pc, id, &canSpecialize);
 
     // This should only happen for a few names like __proto__.
-    if (!canSpecialize)
+    if (!canSpecialize || globalObj->watched())
         return jsop_setprop(name);
-
-    JSObject *globalObj = script->global();
-    JS_ASSERT(globalObj->isNative());
 
     // For the fastest path, the property must be found, and it must be found
     // as a normal data property on exactly the global object.
@@ -4480,8 +4480,7 @@ IonBuilder::jsop_defvar(uint32 index)
     PropertyName *name = script->getName(index);
 
     // Bake in attrs.
-    unsigned attrs = JSPROP_ENUMERATE;
-    // isEvalFrame() requires  attrs |= JSPROP_PERMANENT.
+    unsigned attrs = JSPROP_ENUMERATE | JSPROP_PERMANENT;
     if (JSOp(*pc) == JSOP_DEFCONST)
         attrs |= JSPROP_READONLY;
 
